--- a/package.json
+++ b/package.json
@@ -32,9 +32,10 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
+    "exceljs": "^4.4.0",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.545.0",
-    "next": "15.5.4",
+    "next": "^15.5.9",
     "next-themes": "^0.4.6",
     "openai": "^6.7.0",
     "react": "19.1.0",
@@ -45,7 +46,6 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tiny-emitter": "^2.1.0",
-    "xlsx": "^0.18.5",
     "zod": "^4.1.12"
   },
   "devDependencies": {
