--- a/package.json
+++ b/package.json
@@ -33,9 +33,10 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
+    "dayjs": "^1.11.19",
     "exceljs": "^4.4.0",
     "html2canvas": "^1.4.1",
-    "jspdf": "^3.0.4",
+    "jspdf": "^4.0.0",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.545.0",
     "next": "^15.5.9",
